cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(customICP_rgb)
set(PCL_DIR "/usr/share/pcl-1.7/PCLConfig.cmake")
set(BIN_NAME "customICP_rgb")
set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} /usr/lib)
#g2o
link_directories(/usr/lib/g2o-20140601/lib/)
#set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} /usr/lib/g2o-20140601/lib/)
find_package(PCL 1.7 REQUIRED COMPONENTS io common registration filters kdtree)

include_directories(/usr/include/eigen3)
include_directories(/usr/include/openni/)
include_directories(/usr/include/pcl/)
include_directories(/usr/include/vtk-5.8/)
include_directories(/usr/lib/g2o-20140601/)
include_directories(/usr/include/pcl/kdtree/impl)
include_directories(/usr/include/pcl/kdtree/)
add_definitions(${PCL_DEFINITIONS})

set(OpenCV_DIR /usr/share/OpenCV/)
MESSAGE(STATUS "DIR::" ${OpenCV_DIR})
#find_package(OpenCV REQUIRED)
#include_directories(/usr/include/opencv2/)

set(CMAKE_CXX_FLAGS "-g -Wall")
add_executable (${BIN_NAME} src/main.cpp)
add_library (oflow src/oflow_pcl.cpp)
add_library (optimizerg2o src/GraphOptimizer_G2O.cpp)
add_library (cicp src/CustomICP.cpp)
add_library (bash_util src/BashUtils.cpp)
#target_link_libraries(oflow ${OpenCV_LIBS})
target_link_libraries(oflow opencv_flann)
target_link_libraries(oflow opencv_core)
target_link_libraries(oflow opencv_highgui)
target_link_libraries(oflow opencv_features2d)
target_link_libraries(oflow opencv_calib3d)
target_link_libraries(oflow opencv_imgproc)
target_link_libraries(oflow opencv_video)
MESSAGE(STATUS "OPENCV:::::::::" ${OpenCV_LIBS})
MESSAGE(STATUS "LPASF:::::::::" ${CMAKE_LIBRARY_PATH})
target_link_libraries(oflow ${PCL_LIBRARIES})
target_link_libraries(cicp  ${PCL_LIBRARIES})
target_link_libraries(cicp  oflow)
target_link_libraries (${BIN_NAME} oflow)
target_link_libraries (${BIN_NAME} cicp)
target_link_libraries (${BIN_NAME} ${PCL_LIBRARIES})
target_link_libraries(${BIN_NAME} OpenNI)
target_link_libraries(${BIN_NAME} ${PCL_IO_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_VISUALIZATION_LIBRARIES})
target_link_libraries(${BIN_NAME} pcl_visualization)
target_link_libraries(${BIN_NAME} ${PCL_REGISTRATION_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_COMMON_LIBRARIES})
target_link_libraries(${BIN_NAME} ${PCL_KDTREE_LIBRARIES})
MESSAGE(STATUS "KDTREE" ${PCL_VISUALIZATION_LIBRARIES})
target_link_libraries(${BIN_NAME} pcl_octree)
target_link_libraries(${BIN_NAME} pcl_filters)
target_link_libraries(${BIN_NAME} boost_thread)
target_link_libraries(${BIN_NAME} vtkCommon)
target_link_libraries(${BIN_NAME} vtkFiltering)
target_link_libraries(${BIN_NAME} optimizerg2o)
target_link_libraries(${BIN_NAME} g2o_core)
target_link_libraries(${BIN_NAME} g2o_stuff)
target_link_libraries(${BIN_NAME} g2o_solver_csparse)
target_link_libraries(${BIN_NAME} g2o_solver_eigen)
target_link_libraries(${BIN_NAME} g2o_solver_structure_only)
target_link_libraries(${BIN_NAME} g2o_solver_dense)
target_link_libraries(${BIN_NAME} g2o_solver_pcg)
target_link_libraries(${BIN_NAME} g2o_simulator)
target_link_libraries(${BIN_NAME} g2o_ext_csparse)
target_link_libraries(${BIN_NAME} g2o_interface)
target_link_libraries(${BIN_NAME} g2o_cli)
target_link_libraries(${BIN_NAME} g2o_types_slam3d)
target_link_libraries(${BIN_NAME} g2o_types_slam2d)
target_link_libraries(${BIN_NAME} g2o_types_sclam2d)
target_link_libraries(${BIN_NAME} g2o_types_icp)
target_link_libraries(${BIN_NAME} g2o_types_data)
target_link_libraries(${BIN_NAME} g2o_types_sim3)
target_link_libraries(${BIN_NAME} g2o_types_sba)
target_link_libraries(${BIN_NAME} g2o_parser)
target_link_libraries(${BIN_NAME} cholmod)
target_link_libraries(${BIN_NAME} bash_util)



